[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "import_validator"
version = "0.1.0"
description = "A tool for validating Python imports"
authors = ["devaclark"]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]
include = [
    "src/validator/templates/*.html",
    "src/validator/static/*"
]

[tool.poetry.dependencies]
python = "3.12.8"
pydantic = "^2.10.5"
pydantic-settings = "^2.0.0"
rich = "^13.0.0"
networkx = "^3.0"
matplotlib = "^3.7.0"
tomli = "^2.0.0"
aiohttp = "^3.9.0"
aiohttp-cors = "^0.7.0"
numpy = "^2.1.3"
setuptools = "^69.0.0"
aiofiles = "^23.2.1"
toml = "^0.10.2"
pyyaml = "^6.0.1"
PyQt6 = "^6.8.0"
PyQt6-WebEngine = "^6.8.0"
qasync = "^0.27.0"
PyQt6-QScintilla = "^2.14.1"
jedi = "^0.19.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-randomly = "^3.15.0"
pytest-sugar = "^1.0.0"
pytest-timeout = "^2.2.0"
pytest-xdist = "^3.5.0"

[tool.poetry.scripts]
import-validator = "src.__main__:run_main" 